updated package.Json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "helloworld-tofu",
+  "engines": {
+   "node": ">=6.0.0"
+  },
   "version": "0.0.0",
   "description": "Heroku-Salesforce sample integration app with Fastify",
   "main": "src/app.js",
