--- a/package.json
+++ b/package.json
@@ -15,19 +15,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fastify": "^4.0.0",
+    "fastify-plugin": "^4.0.0",
     "@fastify/autoload": "^5.0.0",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
     "@heroku/salesforce-sdk-nodejs": "^0.3.0-ea",
-    "fastify": "^4.0.0",
-    "fastify-cli": "^5.9.0",
-    "fastify-plugin": "^4.0.0",
-    "npm": "^11.0.0"
+    "fastify-cli": "^5.9.0"
   },
   "devDependencies": {
     "tap": "^16.1.0"
-  },
-  "engines": {
-    "node": ">=22.9.0"
   }
 }
