open AI File Processing aysnchronously

--- a/api-spec.yaml
+++ b/api-spec.yaml
@@ -194,11 +194,11 @@ paths:
         '503':
           $ref: '#/components/responses/UnknownError'
       callbacks:
-        unitOfWorkResponse:
+        activitySummaryResponse:
           '{$request.body#/callbackUrl}':
             post:
               description: Response from /ActivitySummaryGeneration API
-              operationId: unitOfWorkResponseCallback
+              operationId: activitySummaryResponseCallback
               requestBody:
                 content:
                   application/json:
