YAMl FILe updated for update summaries

--- a/api-spec.yaml
+++ b/api-spec.yaml
@@ -230,7 +230,9 @@ paths:
                 assisstantPrompt:
                   type: string
                 userPrompt:
-                  type: string   
+                  type: string
+                summaryMap:
+                  type: string     
                 callbackUrl:
                   type: string
       responses:
