--- a/api-spec.yaml
+++ b/api-spec.yaml
@@ -218,7 +218,7 @@ paths:
         and summarise the activites and break down into Monthly and Quarterly.
       requestBody:
         required: true
-        content:
+        content:git
           application/json:
             schema:
               type: object
